@@ -2,6 +2,7 @@
 v5.0.0-git
 ----------
 
+[jan] Add API to backup and restore user data.
 [mjr] Add ability to save note without redirecting to notebook (Request
       #14085).
 [mjr] Add tag browsing/searching (Request #14178).
